--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!doctype html><html lang="ru"><head><meta charset="UTF-8"><link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"><style>html, body, #root {
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"><title>Игра &quot;Жизнь&quot;</title><link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"><style>html, body, #root {
             margin: 0;
             padding: 0;
             height: 100%;
             font-family: Roboto;
-          }</style><meta name="mobile-web-app-capable" content="yes"><script defer="defer" src="app.main.988dc9a5ad2a4db11f8a.js?cf7558a5f8d6dcda5c9f"></script></head><body><div id="root"></div></body></html>
+          }</style><meta name="mobile-web-app-capable" content="yes"><script defer="defer" src="app.main.54f15f1a68a981ab07b1.js?4cec328bacc83941ca57"></script></head><body><div id="root"></div></body></html>
