--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
             padding: 0;
             height: 100%;
             font-family: Roboto;
-          }</style><meta name="mobile-web-app-capable" content="yes"><script defer="defer" src="app.main.e56cc751c9cce000a851.js?b6368e58676ca933df30"></script></head><body><div id="root"></div></body></html>
+          }</style><meta name="mobile-web-app-capable" content="yes"><script defer="defer" src="app.runtime.d69050303a579c6dec5f.js?e9eef5bfa703da5ca6ca"></script><script defer="defer" src="app.main.dc23dbb2fa7c0b654721.js?e9eef5bfa703da5ca6ca"></script></head><body><div id="root"></div></body></html>
