--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!doctype html><html lang="ru"><head><meta charset="UTF-8"><title>Игра &quot;Жизнь&quot;</title><link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"><style>html, body, #root {
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"><title>Game of Life&quot;</title><link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"><style>html, body, #root {
             margin: 0;
             padding: 0;
             height: 100%;
             font-family: Roboto;
-          }</style><meta name="mobile-web-app-capable" content="yes"><script defer="defer" src="app.runtime.d69050303a579c6dec5f.js?e9eef5bfa703da5ca6ca"></script><script defer="defer" src="app.main.dc23dbb2fa7c0b654721.js?e9eef5bfa703da5ca6ca"></script></head><body><div id="root"></div></body></html>
+          }</style><meta name="mobile-web-app-capable" content="yes"><script defer="defer" src="app.runtime.922fc03f6797abdc3ee0.js?97117147da0f5a817698"></script><script defer="defer" src="app.main.0b88f68d1362a50160fa.js?97117147da0f5a817698"></script></head><body><div id="root"></div></body></html>
