--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!doctype html><html lang="ru"><head><meta charset="UTF-8"><title>Game of Life&quot;</title><link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"><style>html, body, #root {
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"><title>Game of Life</title><link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"><style>html, body, #root {
             margin: 0;
             padding: 0;
             height: 100%;
             font-family: Roboto;
-          }</style><meta name="mobile-web-app-capable" content="yes"><script defer="defer" src="app.runtime.60f3b6afd89f0b3433af.js?c39c459fe3a061a47688"></script><script defer="defer" src="app.main.0b88f68d1362a50160fa.js?c39c459fe3a061a47688"></script></head><body><div id="root"></div></body></html>
+          }</style><script defer="defer" src="app.runtime.f5df18c04679ba2939a4.js?ba27b35ceb73667a88a7"></script><script defer="defer" src="app.main.e43ed734a9d8fde0fdf5.js?ba27b35ceb73667a88a7"></script></head><body><div id="root"></div></body></html>
